<resources>
    <string name="app_name">Chefie</string>
    <string name="button">Button</string>
    <string name="add_item_to_fridge">Add item to fridge</string>
    <string name="shopping_list">Shopping List</string>
    <string name="recipes">Recipes</string>
    <string name="my_fridge">My Fridge</string>
    <string name="add_item_to_base">Add Item to base</string>
    <string name="title_activity_add_item">AddItem</string>
    <string name="insert_name_here">Insert Name Here</string>
    <string name="item_description">Item Description</string>
    <string name="add">Add</string>
    <string name="insert_item_id">Insert item ID</string>
    <string name="quantity">Quantity</string>
    <string name="item_name">Item Name:</string>
    <string name="remove">Remove</string>
    <string name="x">x</string>
    <string name="how_many_items_you_want_to_delete">How Many Items you want to delete?</string>
    <string name="create_new_shopping_list">Create New Shopping List</string>
    <string name="remove_list">Remove List</string>
    <string name="shopping_list_from">Shopping List From:</string>
    <string name="date">date</string>
    <string name="add_shopping_list_item">Add Shopping List Item</string>
    <string name="example">Example</string>
    <string name="feature_will_be_added_soon">Feature will be added soon</string>

</resources>
